# localization-server

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  claims.md  plotter_deps.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: devcontainer.yml  docker-image.yml
docker/: Dockerfile  alice.sh  bob.sh  build.sh  run.sh
plottertest/: 3dbarplot.sh  3dbarplot_customized.sh  3dbarplottest.csv  3dsurfplot.sh  3dsurfplot_customized.sh  3dsurfplottest.csv  barboxplot.sh  barboxplot_customized.sh  barboxplottest.csv  barplot.sh  barplottest.csv  boxplot.sh  boxplottest.csv  grouped_bar.csv  grouped_bar.sh  xyplot.sh  xyplot_customized.sh  xyplottest.csv
scripts/: README.md  aby_float_benchmark_run.sh  clear_fixed_benchmark_plot.sh  clear_fixed_benchmark_run.sh  emp_float_benchmark_dataobl_run.sh  emp_float_benchmark_plot.sh  emp_float_benchmark_run.sh  emp_float_benchmark_run_latency.sh  emp_vs_aby_plot.sh  insetplotter.py  loopleak_vs_dataobl_plot.sh  mult_add_fixed_float_time_plot.sh  mult_add_fixed_float_time_run.sh  netio_plot.sh  network_setup.sh  network_teardown.sh  num_arith_ops_plot.sh  plotter-do-vs-sil.py  plotter-emp-vs-aby.py  plotter-mult-add.py  plotter-netio.py  plotter.py
src/: CMakeLists.txt  README.md
src/aby-float-server/: CMakeLists.txt  gaussnewtonlocalization.cpp  gaussnewtonlocalization.h  invert.cpp  invert.h  lmlocalization.cpp  lmlocalization.h  matmult.cpp  matmult.h  projectpoints.cpp  projectpoints.h  rodrigues.cpp  rodrigues.h  svd.cpp  svd.h  trigfuncs.cpp  trigfuncs.h  twonormsq.cpp  twonormsq.h  util.cpp  util.h
src/common/: fixed_point.h  jlog.h  printutil.h  privacyconf.h
src/emp-float-server/: CMakeLists.txt  fixed_point_emp.h  gaussnewtonlocalization.cpp  gaussnewtonlocalization.h  invert.cpp  invert.h  lmlocalization.cpp  lmlocalization.h  matmult.cpp  matmult.h  projectpoints.cpp  projectpoints.h  rodrigues.cpp  rodrigues.h  server-lm.cpp  svd.cpp  svd.h  trigfuncs.cpp  trigfuncs.h  twonormsq.cpp  twonormsq.h  util.cpp  util.h
test/: CMakeLists.txt
test/aby-float/: CMakeLists.txt  eth3d_bench.cpp  localize_wrapper.hpp  test.cpp
test/cleartext-fixed/: CMakeLists.txt  benchmark.cpp  float_vs_fixed_speed.cpp  test.cpp
test/common-test/: CMakeLists.txt  april_snail_features.hpp  eth3d_features.hpp  eth3d_tester.cpp  hoff_features.hpp  jlog.h  kitti_tester.cpp  test_harness.hpp  test_params.h
test/common-test/cleartext-ref/: gaussnewtonlocalization.hpp  invert.hpp  lmlocalization.hpp  matmult.hpp  projectpoints.hpp  rodrigues.hpp  svd.hpp  trigfuncs.hpp  twonormsq.hpp
test/emp-fixed/: CMakeLists.txt  README.md  test.cpp
test/emp-float/: CMakeLists.txt  client.cpp  eth3d_bench.cpp  localize_wrapper.hpp  test.cpp  test_utils.hpp
